--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,7 +48,7 @@ body {
 
 .h-color {
   /* Background gradient for text */
-  background: linear-gradient(45deg, #f3ec78, #af4261);
+  background: linear-gradient(45deg, #0000FF, #FFFFFF);
   -webkit-background-clip: text;
   color: transparent;
 
@@ -72,12 +72,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(45deg, #af4261, #f3ec78);
+  background: linear-gradient(45deg, #0000FF, #FFFFFF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 2px transparent;
   color: transparent;
 }
+
 
 
 .no-decoration {
