--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,38 +47,8 @@ body {
 }
 
 .h-color {
-  /* Background gradient for text */
-  background: linear-gradient(45deg, #0000FF, #FFFFFF);
-  -webkit-background-clip: text;
-  color: transparent;
-
-  /* Outline gradient */
-  -webkit-text-stroke: 2px transparent;
-  background-clip: border-box;
-  background-clip: text;
-  background-origin: border-box;
-  box-decoration-break: clone;
-
-  /* For better compatibility */
-  text-fill-color: transparent;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px;
-  -webkit-background-clip: text;
-  -webkit-box-decoration-break: clone;
+  color: #fff;
 }
-
-.h-color::before {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(45deg, #0000FF, #FFFFFF);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px transparent;
-  color: transparent;
-}
-
 
 
 .no-decoration {
