--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -50,6 +50,42 @@ body {
   color: #fff;
 }
 
+.h-animated {
+  /* Background gradient for text */
+  background: linear-gradient(45deg, #0000FF, #FFFFFF, #0000FF);
+  -webkit-background-clip: text;
+  color: transparent;
+  
+  /* Outline gradient */
+  -webkit-text-stroke: 2px transparent;
+  background-clip: border-box;
+  background-clip: text;
+  background-origin: border-box;
+  box-decoration-break: clone;
+
+  /* For better compatibility */
+  text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px;
+  -webkit-background-clip: text;
+  -webkit-box-decoration-break: clone;
+
+  /* Animation */
+  background-size: 200% 200%;
+  animation: gradientAnimation 4s ease infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
 
 .no-decoration {
