--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,7 +52,7 @@ body {
 
 .h-animated {
   /* Background gradient for text */
-  background: linear-gradient(45deg, #0000FF, #FFFFFF, #0000FF);
+  background: linear-gradient(45deg, #000033, #2F2F2F, #000033);
   -webkit-background-clip: text;
   color: transparent;
   
