--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -50,31 +50,6 @@ body {
   color: #fff;
 }
 
-.h-animated {
-  /* Background gradient for text */
-  background: linear-gradient(45deg, #FFFFFF, #2F2F2F, #FFFFFF);
-  -webkit-background-clip: text;
-  color: transparent;
-  
-  /* Outline gradient */
-  -webkit-text-stroke: 2px transparent;
-  background-clip: border-box;
-  background-clip: text;
-  background-origin: border-box;
-  box-decoration-break: clone;
-
-  /* For better compatibility */
-  text-fill-color: transparent;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px;
-  -webkit-background-clip: text;
-  -webkit-box-decoration-break: clone;
-
-  /* Animation */
-  background-size: 200% 200%;
-  animation: gradientAnimation 4s ease infinite;
-}
-
 @keyframes gradientAnimation {
   0% {
     background-position: 0% 50%;
@@ -86,6 +61,25 @@ body {
     background-position: 0% 50%;
   }
 }
+
+.h-animated {
+  /* Background gradient for text */
+  background: linear-gradient(45deg, #FFFFFF, #BFBFBF, #2F2F2F, #BFBFBF, #FFFFFF);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+  
+  /* Outline gradient */
+  -webkit-text-stroke: 2px transparent;
+  background-origin: border-box;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+
+  /* Animation */
+  animation: gradientAnimation 4s ease infinite;
+}
+
 
 
 .no-decoration {
