--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -81,7 +81,6 @@ body {
 }
 
 .documentation {
-  color: #fff;
   display: flex;
   flex: 1;
   padding: 20px;
@@ -94,7 +93,13 @@ body {
   position: fixed;
   top: 100px;
   left: 20px;
-  width: 200px;
+  width: 220px;
+}
+
+.toc-box {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 15px;
+  border-radius: 10px;
 }
 
 .toc-section h2 {
@@ -119,10 +124,10 @@ body {
 
 .separator {
   width: 1px;
-  background-color: #fff;
+  background-color: #000;
   height: 100%;
   position: absolute;
-  left: 250px;
+  left: 270px;
   top: 0;
   bottom: 0;
 }
@@ -130,45 +135,37 @@ body {
 .content-section {
   max-width: 800px;
   margin: 0 auto;
-  padding-left: 270px;
+  padding-left: 300px;
 }
 
 .content-section h2 {
-  border-bottom: 1px solid #e1e4e8;
+  border-bottom: 1px solid #000;
   padding-bottom: 5px;
   margin-top: 40px;
-  color: white;
+  color: black;
 }
 
 .content-section h3 {
   margin-top: 20px;
-  color: white;
+  color: black;
 }
 
 .content-section ul,
 .content-section ol {
   text-align: left;
   padding-left: 20px;
-  color: white;
+  color: black;
 }
 
 body {
-  background-color: rgba(30, 30, 30, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: white;
+  color: black;
 }
 
 a {
-  color: white;
-}
-
-
-body {
-  background-color: #1e1e1e;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: white;
+  color: black;
 }
 
 
