--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,6 +46,10 @@ body {
   color: #bfbfbf;
 }
 
+.b.color {
+  color: #1200FF;
+}
+
 .h-color {
   color: #fff;
 }
@@ -60,24 +64,6 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
-
-.h-animated {
-  /* Background gradient for text */
-  background: linear-gradient(45deg, #FFFFFF, #BFBFBF, #2F2F2F, #BFBFBF, #FFFFFF);
-  background-size: 200% 200%;
-  -webkit-background-clip: text;
-  color: transparent;
-  -webkit-text-fill-color: transparent;
-  
-  /* Outline gradient */
-  -webkit-text-stroke: 2px transparent;
-  background-origin: border-box;
-  box-decoration-break: clone;
-  -webkit-box-decoration-break: clone;
-
-  /* Animation */
-  animation: gradientAnimation 4s ease infinite;
 }
 
 .documentation {
