--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,12 +46,12 @@ body {
   color: #bfbfbf;
 }
 
-.b-color {
-  color: #1200FF;
-}
-
-.h-color {
-  color: #fff;
+.blue-gradient {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(270deg, #1200FF, #00E1FD);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s ease infinite;
 }
 
 @keyframes gradientAnimation {
@@ -64,6 +64,11 @@ body {
   100% {
     background-position: 0% 50%;
   }
+}
+
+
+.h-color {
+  color: #fff;
 }
 
 .documentation {
