--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,14 +47,16 @@ body {
 }
 
 .blue-gradient {
-  width: 100%;
-  height: 100vh;
+  font-size: 3rem; /* Adjust as needed */
+  font-weight: bold; /* Adjust as needed */
   background: linear-gradient(270deg, #1200FF, #00E1FD);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-size: 400% 400%;
-  animation: gradientAnimation 10s ease infinite;
+  animation: gradientText 7s ease infinite;
 }
 
-@keyframes gradientAnimation {
+@keyframes gradientText {
   0% {
     background-position: 0% 50%;
   }
@@ -65,6 +67,7 @@ body {
     background-position: 0% 50%;
   }
 }
+
 
 
 .h-color {
