--- a/src/styles/partials/_joinUs.scss
+++ b/src/styles/partials/_joinUs.scss
@@ -5,16 +5,24 @@
   text-align: center;
   flex-direction: column;
   margin: 7rem 0;
-  .joinUs-header {
-    h3 {
-      font-size: 1.9rem;
-      margin: 1rem;
-      font-weight: bold;
-      color: #eee;
-    }
-  }
-  .joinUs-para {
-    margin-bottom: 2rem;
-    font-size: 0.9rem;
-  }
+  /* Add gradient outline */
+  text-shadow: 
+    0 0 3px #1200FF,
+    0 0 3px #00E1FD,
+    0 0 5px #1200FF,
+    0 0 5px #00E1FD,
+    0 0 7px #1200FF,
+    0 0 7px #00E1FD;
+}
+
+.joinUs-header h3 {
+  font-size: 1.9rem;
+  margin: 1rem;
+  font-weight: bold;
+  color: #eee;
+}
+
+.joinUs-para {
+  margin-bottom: 2rem;
+  font-size: 0.9rem;
 }
